--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,9 +1,122 @@
 .navbar-body {
   height: 100vh;
-  width: 15rem;
+  width: 20rem;
   min-width: 17rem;
   background-color: #0e1327;
   position: relative;
   display: flex;
   flex-direction: column;
+  color: white;
+  padding: 1rem 2em 1rem 3em;
+  button{
+    text-align: center;
+    color:white;
+    background-color: var(--purple);
+    border:none;
+    padding: 0.7em 1em 1em 1em;
+    border-radius: 1em;
+    overflow: hidden;
+    position: relative;
+    position:relative;
+    span{
+      z-index: 100;
+      position: relative;
+    }
+    &::before{
+      content:'';
+      height:100%;
+      z-index: 0;
+      left:0;
+      position: absolute;
+      top:100%;
+      width:100%;
+      transition: 0.1s ease-in;
+      background-color: rgb(85, 110, 124);
+    }
+    &:hover{
+      &::before{
+        top:0%;
+      }
+    }
+  }
+  .add-dashboard {
+    margin-bottom: 2rem;
+    width: 100%;
+    padding:0.3rem;
+    textarea {
+      background-color: rgba(0, 0, 0, 0);
+      color: white;
+      outline: none;
+      border-bottom: 1px solid var(--purple);
+      border-right: 0px;
+      border-left: 0px;
+      width: 100%;
+      border-top: 0px;
+      height: 2rem;
+      &:hover, &:focus{
+        border-bottom: 1px rgb(176, 51, 192) solid;
+      }
+
+    }
+    .plus-sign {
+      width: 40px;
+      margin-right: 0px;
+      i {
+        color: white;
+        font-size: 1.1rem;
+      }
+    }
+  }
+  h1 {
+    font-size: 2rem;
+  }
+  ul {
+    list-style: none;
+    padding: 0;
+    font-size: 1.1em;
+    a {
+      &:hover {
+        text-decoration: none;
+      }
+      i {
+        width: 1rem;
+        text-align: center;
+        margin-right: 1rem;
+      }
+      li{
+        padding:0.3rem;
+        border-radius: 10px;
+        &:hover{
+          i{
+            animation: nav-hover 0.1s ease-in-out;
+          }
+        }
+      }
+    }
+    .active-dashboard {
+      color: #f4d731;
+      &:hover {
+        color: rgb(216, 125, 40);
+      }
+    }
+    .inactive-dashboard {
+      color: white;
+      &:hover {
+        color: rgb(194, 213, 226);
+      }
+    }
+  }
+}
+
+
+@keyframes nav-hover{
+   0%{
+     margin-right:1rem;
+   }
+   50%{
+     margin-right: 1.4rem;
+   }
+   100%{
+     margin-right: 1rem;
+   }
 }
