--- a/scss/main.scss
+++ b/scss/main.scss
@@ -7,6 +7,8 @@
 //components
 @import "components/navbar";
 @import "components/navigator";
+@import "components/note-editor";
+@import "components/book-pop-up";
 //pages
 @import "pages/dashboard";
 //layout
