--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,7 +5,7 @@ html {
   --bgblue: #2d9aed;
   --itemblue: #2a9df5;
   --purple: #605bac;
-  --darkpurp: 
+  --lowPurple:rgb(81, 81, 133);
 }
 
 ::-webkit-scrollbar {
@@ -25,4 +25,6 @@ body {
   display: flex;
   background-color: #f2f5f8 !important;
   max-width: 100vw;
+  height:1080px;
+  overflow-y: hidden;
 }
