--- a/scss/components/_navigator.scss
+++ b/scss/components/_navigator.scss
@@ -1,32 +1,67 @@
 .navigator {
-    text-align: left;
-    padding-left: 5rem;
-    font-family: sans-serif;
-    font-size: 0.9em;
-    height: 60px;
-    margin-top: 1.4em;
-    h3{
-        font-size: 1.4em;
-        font-weight:bold;
-        margin-bottom: 0;
+  text-align: left;
+  padding-left: 5rem;
+  font-family: sans-serif;
+  font-size: 0.9em;
+  height: 60px;
+  margin-top: 1.4em;
+  .dashboard-selector {
+    width: 16em;
+    .dd {
+      width: fit-content;
+      button {
+        background-color: rgba(0, 0, 0, 0);
+        color: black;
+        border: 0px;
+        box-shadow: -2px 8px 14px -6px rgba(0, 0, 0, 0.75);
+        -webkit-box-shadow: -2px 8px 14px -6px rgba(0, 0, 0, 0.75);
+        -moz-box-shadow: -2px 8px 14px -6px rgba(0, 0, 0, 0.75);
+        &:hover {
+          box-shadow: -2px 8px 14px -13px rgba(0, 0, 0, 0.75);
+          -webkit-box-shadow: -2px 8px 14px -13px rgba(0, 0, 0, 0.75);
+          -moz-box-shadow: -2px 8px 14px -13px rgba(0, 0, 0, 0.75);
+        }
+        span {
+          margin-right: 0.7em;
+        }
+      }
     }
-    .nav-icon {
-      margin-right: 1em;
+    .ddm {
+      width: 100%;
+      transition: 0.1s ease-in-out;
     }
-    #nav-drop {
-      color: var(--itemblue);
-      margin-left: 1em;
-      width:1em;
-      height:1em;
-    }
-    .nav-create {
-      outline: none;
-      border: none;
-      height: 40px;
-      width: 7rem;
-      font-weight: bold;
-      margin-left: 2rem;
-      background-color: var(--itemblue);
-      color: white;
+    .ddi {
+      position: relative;
+      &::after {
+        content: "";
+        position: absolute;
+        width: 0px;
+        right: 0;
+        top: 0;
+        height: 100%;
+        background-color: var(--yellow);
+        transition: 0.1s ease-in-out;
+      }
+      &:hover {
+        &::after {
+          width: 10px;
+        }
+      }
     }
   }
+
+  .nav-create {
+    outline: none;
+    border: none;
+    height: 40px;
+    width: 7rem;
+    font-weight: bold;
+    margin-left: 2rem;
+    background-color: var(--itemblue);
+    color: white;
+    transition: 0.1s ease-in-out;
+    &:hover{
+      background-color:var(--lowPurple);
+    }
+  }
+}
