--- a/scss/pages/_dashboard.scss
+++ b/scss/pages/_dashboard.scss
@@ -14,6 +14,17 @@
   flex-direction: row;
   padding-left: 5rem;
   height: 100%;
+  position: relative;
+  overflow: hidden;
+  &::after {
+    content: "";
+    background-color: var(--purple);
+    height: 2rem;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+  }
 }
 
 .dash-cont {
@@ -22,8 +33,7 @@
 
 .dashboard-item {
   min-width: 600px;
-  max-width: 620px;
-  height: 72%;
+  height: 90%;
   position: relative;
   padding: 2em;
   background-color: white;
@@ -31,8 +41,6 @@
   -webkit-box-shadow: -1px 10px 16px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 10px 16px 0px rgba(0, 0, 0, 0.75);
 }
-
-
 
 .jcc {
   justify-content: center;
@@ -48,6 +56,8 @@
   color: var(--itemblue);
   margin-top: 0.3em;
   cursor: pointer;
+  box-sizing: border-box;
+  border-bottom: 1px solid white;
   &:hover {
     border-bottom: 1px solid var(--itemblue);
   }
@@ -72,7 +82,7 @@
   padding-bottom: 4em;
   margin-bottom: 1rem;
   min-width: 457px;
-  height: 460px;
+  height: 603px;
   background-color: white;
   margin-left: 3rem;
   box-shadow: -1px 10px 16px 0px rgba(0, 0, 0, 0.75);
@@ -94,6 +104,14 @@
 .dashboard-item-scroll {
   width: 100%;
   height: 87%;
+  overflow-y: scroll;
+  overflow-x: visible;
+  scroll-behavior: smooth;
+}
+
+.dashboard-item-half-scroll {
+  width: 100%;
+  height: 100%;
   overflow-y: scroll;
   overflow-x: visible;
 }
@@ -130,7 +148,7 @@
 .searchIcon {
   margin-left: auto;
   cursor: pointer;
-  margin-top:4px;
+  margin-top: 4px;
 }
 
 .no-results {
@@ -148,6 +166,17 @@
   height: 120px;
   position: relative;
   cursor: pointer;
+  background-color: white;
+  p {
+    transition: 0.1s ease-in-out;
+  }
+  &:hover {
+    color: var(--purple);
+    background-color: rgb(236, 240, 243);
+    .book-item-authors {
+      color: var(--purple);
+    }
+  }
 }
 
 .book-img-container {
@@ -156,6 +185,7 @@
   height: 100%;
   background-size: contain;
   border-radius: 10px;
+  transition: 0.1s ease-in-out;
   .book-item-image {
     height: 100%;
     width: auto;
@@ -190,25 +220,48 @@
   margin-bottom: 0;
 }
 .bookshelf-button {
+  z-index: 100;
   height: 3rem;
   width: 3rem;
   outline: none;
   border: none;
   background-color: var(--bgblue);
   color: white;
-  font-size: 100%;
+  font-size: 2em;
   font-weight: bold;
   position: absolute;
   bottom: 0;
   right: 0;
   border-top-left-radius: 50%;
+  transition: 0.1s ease-in-out;
+  &:hover {
+    border-top-left-radius: 0%;
+    background-color: var(--lowPurple);
+    span {
+      top: -10%;
+      transform: rotate(90deg);
+    }
+  }
+  span {
+    height: fit-content;
+    position: absolute;
+    top: 0%;
+    bottom: 0;
+    margin-top: 0;
+    margin-right: 0;
+    left: 0;
+    right: 0;
+    margin-right: auto;
+    margin-left: auto;
+    transition: 0.1s ease-in-out;
+  }
 }
 
 .publishYear {
   margin-top: 0.4em;
 }
 
-// Bokoshelf
+// Bookshelf
 .bs-item {
   position: relative;
   height: 150px;
@@ -223,6 +276,7 @@
   box-shadow: -1px 3px 10px 0px rgba(0, 0, 0, 0.75);
   -webkit-box-shadow: -1px 2px 4px 0px rgba(0, 0, 0, 0.75);
   -moz-box-shadow: -1px 3px 10px 0px rgba(0, 0, 0, 0.75);
+
   &:hover {
     .bs-info {
       visibility: visible;
@@ -246,22 +300,24 @@
     flex-direction: column;
     justify-content: center;
     transition: 0.2s ease-in-out;
+    text-align: center;
     .bs-item-title {
       color: white;
       font-size: 0.8em;
-      padding: 0.3em;
+      padding: 0.6em;
     }
     .bs-author {
       font-size: 0.8em;
       color: white;
-      font-family: serif;
+      font-family: sans-serif;
+      padding: 0.6em;
     }
   }
 }
 
 .bs-container {
-  min-width: 60rem;
-  max-width: 70rem;
+  min-width: 40rem;
+  max-width: 60rem;
   height: 28%;
   h2 {
     font-family: serif;
@@ -278,6 +334,8 @@
   padding-bottom: 1em;
   overflow-x: scroll;
   overflow-y: hidden;
+  max-width: 100%;
+  scroll-behavior: smooth;
 }
 .sm-seperator {
   width: 20%;
@@ -285,10 +343,6 @@
   margin-left: auto;
   height: 1px;
   background-color: white;
-}
-
-.span-icon {
-  margin-left: 0.7em;
 }
 
 .notes-pseudo {
@@ -318,50 +372,113 @@
   }
 }
 
-.note-item {
-  width: 300px;
-  text-align: left;
-  margin-bottom: 2rem;
-  margin-left: 1rem;
-  .note-but {
-    margin-right: 1em;
-    text-decoration: none;
-    outline: none;
-    border: none;
-    width: 7em;
-    height: 2em;
+.notes-list {
+  .note-item {
+    width: 320px;
+    text-align: left;
+    margin-bottom: 2rem;
+    margin-left: 1rem;
     cursor: pointer;
-  }
-  .note-edit-button {
-    background-color: #adeafc;
-    color: #21a5f1;
-  }
-  .note-delete-button {
-    background-color: #ffbec1;
-    color: #db4a58;
-  }
-  .note-name {
-    font-size: 1.2em;
-    font-weight: bold;
-    font-family: serif;
-    margin-bottom: 0em;
-    margin-top: 0em;
-  }
-  .note-edited {
-    font-size: 0.8em;
-    font-weight: lighter;
-    color: #2dabf2;
-    font-family: sans-serif;
-  }
-  .note-summ {
-    font-size: 0.8em;
-    font-weight: lighter;
-    font-family: sans-serif;
-    margin-top: 0.5em;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    overflow: hidden;
-    -webkit-line-clamp: 3; /* number of lines to show */
-    -webkit-box-orient: vertical;
+    position: relative;
+    padding-right: 1em;
+    &::after {
+      content: "";
+      position: absolute;
+      width: 0px;
+      right: 0;
+      top: 0;
+      height: 100%;
+      background-color: var(--yellow);
+      transition: 0.1s ease-in-out;
+    }
+    &:hover {
+      &::after {
+        width: 10px;
+      }
+    }
+    .note-but {
+      margin-right: 1em;
+      position: relative;
+      text-decoration: none;
+      outline: none;
+      border: none;
+      width: 7em;
+      height: 2.2em;
+      cursor: pointer;
+      &:hover {
+        .note-but-text {
+          left: -20%;
+        }
+        .note-icon {
+          left: 50%;
+        }
+      }
+      .note-but-text {
+        height: fit-content;
+        width: fit-content;
+        z-index: 100;
+        position: absolute;
+        left: 0;
+        right: 0;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: auto;
+        margin-bottom: auto;
+        top: 0;
+        bottom: 0.2em;
+        transition: 0.1s ease-in-out;
+      }
+      .note-icon {
+        position: absolute;
+        left: 0;
+        right: 0;
+        height: fit-content;
+        top: 0;
+        bottom: 0;
+        margin-top: auto;
+        margin-bottom: auto;
+        transition: 0.1s ease-in-out;
+      }
+    }
+    .note-edit-button {
+      background-color: #adeafc;
+      color: #21a5f1;
+      .note-but-text {
+        background-color: #adeafc;
+      }
+    }
+    .note-delete-button {
+      background-color: #ffbec1;
+      color: #db4a58;
+      .note-but-text {
+        background-color: #ffbec1;
+      }
+    }
+    .note-name {
+      font-size: 1.2em;
+      font-weight: bold;
+      font-family: serif;
+      margin-bottom: 0em;
+      margin-top: 0em;
+      max-width: 90%;
+    }
+    .note-edited {
+      font-size: 0.8em;
+      font-weight: lighter;
+      color: #2dabf2;
+      font-family: sans-serif;
+    }
+    .note-summ {
+      font-size: 0.8em;
+      font-weight: lighter;
+      font-family: sans-serif;
+      margin-top: 0.5em;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      overflow: hidden;
+      -webkit-line-clamp: 3; /* number of lines to show */
+      -webkit-box-orient: vertical;
+      max-width: 90%;
+    }
   }
 }
