--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,7 @@
 @import "components/navigator";
 @import "components/note-editor";
 @import "components/book-pop-up";
+@import "components/add-dashboard.scss";
 //pages
 @import "pages/dashboard";
 //layout
