--- a/scss/components/_book-pop-up.scss
+++ b/scss/components/_book-pop-up.scss
@@ -1,3 +1,7 @@
+#book-preview{
+  display:none;
+}
+
 .pop-up-window {
   width: 100%;
   height: 100%;
@@ -9,7 +13,6 @@
   align-items: center;
   display:flex;
   .pop-up-box {
-    width: 50%;
     background-color: white;
     padding: 0rem 2rem 2rem 2rem;
     border-radius: 2em;
