--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -8,41 +8,42 @@
   flex-direction: column;
   color: white;
   padding: 1rem 2em 1rem 3em;
-  button{
+  .login {
     text-align: center;
-    color:white;
+    text-decoration: none;
+    color: white;
     background-color: var(--purple);
-    border:none;
+    border: none;
     padding: 0.7em 1em 1em 1em;
     border-radius: 1em;
     overflow: hidden;
     position: relative;
-    position:relative;
-    span{
+    position: relative;
+    span {
       z-index: 100;
       position: relative;
     }
-    &::before{
-      content:'';
-      height:100%;
+    &::before {
+      content: "";
+      height: 100%;
       z-index: 0;
-      left:0;
+      left: 0;
       position: absolute;
-      top:100%;
-      width:100%;
+      top: 100%;
+      width: 100%;
       transition: 0.1s ease-in;
       background-color: rgb(85, 110, 124);
     }
-    &:hover{
-      &::before{
-        top:0%;
+    &:hover {
+      &::before {
+        top: 0%;
       }
     }
   }
   .add-dashboard {
     margin-bottom: 2rem;
     width: 100%;
-    padding:0.3rem;
+    padding: 0.3rem;
     textarea {
       background-color: rgba(0, 0, 0, 0);
       color: white;
@@ -53,10 +54,10 @@
       width: 100%;
       border-top: 0px;
       height: 2rem;
-      &:hover, &:focus{
+      &:hover,
+      &:focus {
         border-bottom: 1px rgb(176, 51, 192) solid;
       }
-
     }
     .plus-sign {
       width: 40px;
@@ -83,11 +84,11 @@
         text-align: center;
         margin-right: 1rem;
       }
-      li{
-        padding:0.3rem;
+      li {
+        padding: 0.3rem;
         border-radius: 10px;
-        &:hover{
-          i{
+        &:hover {
+          i {
             animation: nav-hover 0.1s ease-in-out;
           }
         }
@@ -108,15 +109,14 @@
   }
 }
 
-
-@keyframes nav-hover{
-   0%{
-     margin-right:1rem;
-   }
-   50%{
-     margin-right: 1.4rem;
-   }
-   100%{
-     margin-right: 1rem;
-   }
+@keyframes nav-hover {
+  0% {
+    margin-right: 1rem;
+  }
+  50% {
+    margin-right: 1.4rem;
+  }
+  100% {
+    margin-right: 1rem;
+  }
 }
