--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -6,6 +6,7 @@ html {
   --itemblue: #2a9df5;
   --purple: #605bac;
   --lowPurple:rgb(81, 81, 133);
+  --darkblue: #0e1327;
 }
 
 ::-webkit-scrollbar {
@@ -25,6 +26,4 @@ body {
   display: flex;
   background-color: #f2f5f8 !important;
   max-width: 100vw;
-  height:1080px;
-  overflow-y: hidden;
 }
