--- a/scss/components/_book-pop-up.scss
+++ b/scss/components/_book-pop-up.scss
@@ -1,5 +1,5 @@
-#book-preview{
-  display:none;
+#book-preview {
+  display: none;
 }
 
 .pop-up-window {
@@ -11,11 +11,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  display:flex;
+  display: flex;
   .pop-up-box {
     background-color: white;
     padding: 0rem 2rem 2rem 2rem;
     border-radius: 2em;
+    width: 50%;
+    min-width: 30rem;
     box-shadow: 1px 10px 26px -1px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 1px 10px 26px -1px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 1px 10px 26px -1px rgba(0, 0, 0, 0.75);
@@ -29,8 +31,8 @@
         outline: none;
         border: none;
         color: black;
-        &:hover{
-            color:var(--purple);
+        &:hover {
+          color: var(--purple);
         }
       }
     }
@@ -39,17 +41,22 @@
       flex-direction: row;
       position: relative;
       height: 100%;
-      .book-info-text{
-          display: flex;
-          flex-direction: column;
-          height: 16em;
+      .book-info-text {
+        display: flex;
+        flex-direction: column;
+        height: 16em;
       }
       h1 {
         font-size: 2rem;
         font-weight: bold;
         width: 80%;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 4; /* number of lines to show */
+        -webkit-box-orient: vertical;
       }
-      p{
+      p {
         margin-bottom: 0em;
         font-size: 1.2em;
       }
@@ -60,7 +67,7 @@
       }
       button {
         position: absolute;
-        bottom:0;
+        bottom: 0;
       }
     }
 
@@ -76,43 +83,67 @@
         flex: 1 1 1;
         flex-wrap: wrap;
         overflow: scroll;
-        .note-item {
-          background-color: rgb(233, 233, 233);
-          height: 300px;
-          margin: 1rem 1rem 0 0;
-          flex-grow: 1;
-          max-width: 30%;
-          position: relative;
-          cursor: pointer;
-          &::after{
-            content:'';
-            background-color:var(--yellow);
-            height: 0%;
-            transition: 0.1s ease-in-out;
-            width:100%;
-            position: absolute;
-            right:0;
-            top:0;
-            z-index:400;
-          }
-          &:hover{
-            &::after{
-                height:3%;
-            }
-          }
-          h3{
-              position: relative;
-            
-          }
-          h2{
-            margin: 3rem 3rem 2rem 3rem;  
-            height: 50%;
-          }
-          p{
-              margin: 0rem 3rem 3rem 3rem; 
-          }
-        }
       }
+    }
+  }
+}
+.notes-grid {
+  .note-item {
+    background-color: rgb(233, 233, 233);
+    height: 300px;
+    margin: 1rem 1rem 0 0;
+    flex-grow: 1;
+    max-width: 30%;
+    position: relative;
+    cursor: pointer;
+    &::after {
+      content: "";
+      background-color: var(--yellow);
+      height: 0%;
+      transition: 0.1s ease-in-out;
+      width: 100%;
+      position: absolute;
+      right: 0;
+      top: 0;
+      z-index: 400;
+    }
+    &:hover {
+      &::after {
+        height: 3%;
+      }
+    }
+    h3 {
+      position: relative;
+    }
+    h2 {
+      margin: 3rem 3rem 2rem 3rem;
+      height: 50%;
+    }
+    p {
+      margin: 0rem 3rem 3rem 3rem;
+    }
+  }
+}
+
+@media screen and (max-width: 1645px) {
+  .notes-grid {
+    flex: 1 1 !important;
+    h2,
+    p,
+    h3 {
+      margin-left: 1rem !important;
+      margin-right: 1em !important;
+    }
+    .note-item {
+      max-width: 40%;
+    }
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .notes-grid {
+    .note-item {
+      max-width: 70%;
     }
   }
 }
