--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 html {
-  --green: #b2db1d;
   --star: #ebb810;
-  --PRIMARY: green;
+  --Green: #7cf46f;
   --bgblue: #2d9aed;
+  --blueText: #193888;
   --itemblue: #2a9df5;
-  --purple: #605bac;
+  --Purple: #6523ea;
   --lowPurple: rgb(81, 81, 133);
-  --darkblue: #0e1327;
+  --darkblue: #10196c;
 }
 
 ::-webkit-scrollbar {
@@ -24,6 +24,6 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  background-color: #f2f5f8 !important;
+  background-color: white !important;
   max-width: 100vw;
 }
