--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -24,6 +24,14 @@ body {
   margin: 0;
   padding: 0;
   display: flex;
-  background-color: white !important;
+  background-color: rgb(241, 241, 241) !important;
   max-width: 100vw;
+}
+
+#body {
+  padding-left: 22rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
