--- a/scss/pages/_bookshelf.scss
+++ b/scss/pages/_bookshelf.scss
@@ -4,12 +4,37 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  .search-bar {
+    min-width: 21rem;
+    position: relative;
+    i {
+      position: absolute;
+      font-size: 1rem;
+      left: 1em;
+      color: rgb(161, 147, 147);
+      top: 30%;
+    }
+  }
+  h2 {
+    font-family: "BreeSerif";
+    margin-bottom: 0.5em;
+  }
   input {
     border: none;
-    padding: 0.7em 1em;
-    border-radius: 0.7em 0 0 0;
-    min-width: 16rem;
+    padding: 0.7em 1em 0.7em 3em;
+    border-radius: 0.7em 0 0.7em 0;
+    width: 21rem;
+    box-shadow: 0px 5px 10px -1px rgba(0, 0, 0, 0.31);
+    transition: 0.1s ease-in-out;
+    &:hover {
+      box-shadow: 0px 5px 13px -1px rgba(0, 0, 0, 0.31);
+    }
+    &:focus {
+      outline: none;
+      box-shadow: 0px 5px 13px -1px rgba(0, 0, 0, 0.31);
+    }
   }
+
   .search-button {
     outline: none;
     background-color: var(--blueText);
@@ -20,132 +45,31 @@
     color: var(--Green);
     font-weight: bold;
   }
+  
 }
+
+.green-button {
+  font-weight: bold;
+  color: var(--darkblue);
+  background-color: var(--Green);
+  padding: 0.7em 2em;
+  border-radius: 1em 0 1em 0;
+  border: 0px;
+  outline: 0px;
+  transition: 0.1s ease-in-out;
+  &:hover {
+    background-color: var(--blueText);
+    color: var(--Green);
+  }
+}
+
 
 .bookshelf-grid {
   display: flex;
   width: 100%;
   flex-wrap: wrap;
   justify-content: center;
-  .bookshelf-item-container {
-    margin-right: 4rem;
-    position: relative;
-    width: 13rem;
-    margin-top: 6rem;
-
-    &:hover {
-      .background {
-        transform: scale(1.1, 1.1);
-        opacity: 1;
-      }
-      .book-item-front {
-        transform: scale(0.8) translateY(-35%);
-        img {
-          object-fit: contain;
-        }
-      }
-      .book-item-back {
-        animation: book-item-animation 0.1s ease-in forwards;
-        animation-delay: 0.1s;
-      }
-    }
-    .background {
-      background-color: white;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      z-index: -1;
-      transform: scale(0.2, 0.9);
-      opacity: 0;
-      transition: transform 250ms;
-      box-shadow: -1px 9px 28px -1px rgba(0, 0, 0, 0.31);
-      border-radius: 0.6em;
-      &::after {
-        content: "";
-        position: absolute;
-        top: 0;
-        height: 20%;
-        background-color: var(--Purple);
-        border-radius: 0.6em 0.6em 0 0;
-        width: 100%;
-      }
-    }
-    .book-item-front {
-      transition: 250ms;
-      img {
-        width: 100%;
-        height: 20rem;
-        object-fit: cover;
-        border-radius: 1em;
-        background-color: var(--blueText);
-      }
-      .front-info {
-        h2,
-        p {
-          text-align: center;
-        }
-        h2 {
-          font-size: 1.4rem;
-          font-family: serif;
-          font-weight: bold;
-          margin-top: 1rem;
-          margin-bottom: 0;
-          color: var(--blueText);
-        }
-      }
-    }
-    .book-item-back {
-      position: absolute;
-      bottom: 1em;
-      left: 0;
-      right: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      opacity: 0;
-      transition: 0.1s ease-in-out;
-      .book-stats {
-        margin-bottom: 1em;
-        p {
-          font-weight: bold;
-          font-size: 1rem;
-          color: var(--Purple);
-          span {
-            i {
-              margin-right: 1em;
-              color: var(--Purple);
-            }
-          }
-        }
-      }
-      p {
-        font-size: 1rem;
-        font-weight: lighter;
-        margin-top: 0em;
-      }
-      .book-buttons {
-        justify-content: space-between;
-        width: 84%;
-        button {
-          border-radius: 1em 0em 1em 0em;
-          padding: 0.6em 1em;
-          background-color: var(--Green);
-          border: 0px;
-          outline: none;
-          color: var(--blueText);
-          font-weight: bold;
-          transition: 0.1s ease-in-out;
-          font-size: 0.9rem;
-          &:hover {
-            background-color: var(--blueText);
-            color: var(--Green);
-          }
-        }
-      }
-    }
-  }
+  margin-bottom: 4rem;
 }
 
 @keyframes book-item-animation {
