--- a/scss/pages/_bookshelf.scss
+++ b/scss/pages/_bookshelf.scss
@@ -50,16 +50,16 @@
 
 .green-button {
   font-weight: bold;
-  color: var(--darkblue);
-  background-color: var(--Green);
+  color: $darkblue;
+  background-color: $green;
   padding: 0.7em 2em;
   border-radius: 1em 0 1em 0;
   border: 0px;
   outline: 0px;
   transition: 0.1s ease-in-out;
   &:hover {
-    background-color: var(--blueText);
-    color: var(--Green);
+    background-color: $blueText;
+    color: $green;
   }
 }
 
