--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $itemblue: #2a9df5;
 $blueText: #193888;
 $lowPurple: rgb(81, 81, 133);
 $darkblue: #10196c;
+$menu-dropdown: 0px 1px 4px rgba(0, 0, 0, 0.34);
 
 body {
   margin: 0;
