--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,9 +11,12 @@
 @import "components/note-editor";
 @import "components/book-pop-up";
 @import "components/add-dashboard.scss";
+@import "components/buttons";
 //pages
 @import "pages/dashboard";
 @import "pages/login";
 @import "pages/bookshelf";
 @import "pages/about-book";
+@import "pages/study-page";
+@import "pages/notes";
 //layout
