--- a/scss/pages/_about-book.scss
+++ b/scss/pages/_about-book.scss
@@ -1,8 +1,11 @@
-.bookPageBody {
+.bpb{
   padding-left: 12rem;
   display: flex;
   flex-direction: column;
-  margin-bottom:4rem;
+  margin-bottom:2rem;
+}
+
+.bookPageBody {
   .recent-heading{
     font-family:"Song";
     max-width: 500px;
