--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -1,49 +1,30 @@
-.navbar-body {
-  height: 100vh;
-  width: 22rem;
-  min-width: 17rem;
-  background-color: #0e1327;
-  position: fixed;
-  display: flex;
-  flex-direction: column;
-  color: white;
-  padding: 1rem 2em 1rem 3em;
 
-  .login {
-    text-align: center;
-    text-decoration: none;
-    color: white;
-    background-color: var(--purple);
-    border: none;
-    padding: 0.7em 1em 1em 1em;
-    border-radius: 1em;
-    overflow: hidden;
-    position: relative;
-    span {
-      z-index: 100;
-      position: relative;
-    }
-    &::before {
-      content: "";
-      height: 100%;
-      z-index: 0;
-      left: 0;
-      position: absolute;
-      top: 100%;
-      width: 100%;
-      transition: 0.1s ease-in;
-      background-color: rgb(85, 110, 124);
-    }
-    &:hover {
-      &::before {
-        top: 0%;
-      }
-    }
+  
+
+
+
+
+.vertical-nav {
+  min-width: 17rem;
+  width: 17rem;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.1);
+  transition: all 0.4s;
+  background-color:$navbg;
+  z-index: 1000;
+  color:white;
+  padding-top:3rem;
+  .readie-logo{
+    height:2.5rem;
+    padding-left: 1rem;
   }
   .add-dashboard {
     margin-bottom: 2rem;
-    width: 100%;
-    padding: 0.3rem;
+    width: 90%;
+    padding-left: 1rem;
     textarea {
       background-color: rgba(0, 0, 0, 0);
       color: white;
@@ -68,55 +49,116 @@
       }
     }
   }
-  h1 {
-    font-size: 2rem;
+  .burgerbar-button{
+    position:fixed;
+    top:1rem;
+    left:15rem;
+    text-decoration: none;
+    background-color: $purple;
+    color:white;
+    outline:none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:50px;
+    height: 50px;
+    border-radius: 50%;
+    border:none;
+    transition:0.4s;
+    z-index: 1000;
   }
-  ul {
-    list-style: none;
-    padding: 0;
-    font-size: 1.1em;
-    a {
-      &:hover {
-        text-decoration: none;
-      }
-      i {
-        width: 1rem;
-        text-align: center;
-        margin-right: 1rem;
-      }
-      li {
-        padding: 0.3rem;
-        border-radius: 10px;
-        &:hover {
-          i {
-            animation: nav-hover 0.1s ease-in-out;
-          }
-        }
+  .activeBurger{
+    left:2rem;
+  }
+  .login {
+    margin-top:5rem;
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    background-color: var(--purple);
+    border: none;
+    padding: 0.7rem 1rem 1rem 1rem;
+    border-radius: 0.6rem;
+    overflow: hidden;
+    position: relative;
+    width:80%;
+    span {
+      z-index: 100;
+      position: relative;
+    }
+    &::before {
+      content: "";
+      height: 100%;
+      z-index: 0;
+      left: 0;
+      position: absolute;
+      top: 100%;
+      width: 100%;
+      transition: 0.1s ease-in;
+      background-color: rgb(85, 110, 124);
+    }
+    &:hover {
+      &::before {
+        top: 0%;
       }
     }
-    .active-dashboard {
-      color: #f4d731;
-      &:hover {
-        color: rgb(216, 125, 40);
-      }
-    }
-    .inactive-dashboard {
-      color: white;
-      &:hover {
-        color: rgb(194, 213, 226);
+  }
+  .nav-item{
+    color:white;
+    a{
+      color:white;
+      &:hover{
+        background-color: $lowPurple;
       }
     }
   }
 }
 
-@keyframes nav-hover {
-  0% {
-    margin-right: 1rem;
+.page-content {
+  width: calc(100% - 17rem);
+  margin-left: 17rem;
+  transition: all 0.4s;
+  padding-left: 3rem;
+}
+
+/* for toggle behavior */
+
+#sidebar.active {
+  margin-left: -17rem;
+}
+
+.burgerbar-button.active{
+  left:2rem;
+}
+
+#content.active {
+
+  margin-left: 4rem;
+}
+
+@media (max-width: 900px) {
+  #sidebar {
+    margin-left: -17rem;
   }
-  50% {
-    margin-right: 1.4rem;
+  #sidebar.active {
+    margin-left: 0;
   }
-  100% {
-    margin-right: 1rem;
+  #content {
+    width: inherit;
+    margin-left: 1rem;
+  }
+  .page-content{
+    padding-left: 0rem;
+  }
+  #content.active {
+    margin-left: 17rem;
+    width: calc(100% - 17rem);
+  }
+  .burgerbar-button.active{
+    left:15rem !important;
+  }
+  .burgerbar-button{
+    left:2rem !important;
   }
 }
+
