--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -8,6 +8,7 @@ html {
   --darkblue: #10196c;
 }
 
+$yellow:#ebb810;
 $green: #7cf46f;
 $purple:#6523ea;
 $itemblue: #2a9df5;
@@ -16,6 +17,7 @@ $lowPurple: rgb(81, 81, 133);
 $darkblue: #10196c;
 $menu-dropdown: 0px 1px 4px rgba(0, 0, 0, 0.34);
 $navbg:#0e1327;
+$offwhite:#FAF9F6;
 
 body {
   margin: 0;
