--- a/scss/components/_book-item.scss
+++ b/scss/components/_book-item.scss
@@ -69,7 +69,7 @@
   }
   .book-item-back {
     position: absolute;
-    bottom: 1em;
+    bottom: 2em;
     left: 0;
     right: 0;
     display: flex;
@@ -79,16 +79,18 @@
     transition: 0.1s ease-in-out;
     .book-stats {
       margin-bottom: 1em;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 90%;
       p {
         font-weight: bold;
-        font-size: 1rem;
-        color: var(--Purple);
-        span {
-          i {
-            margin-right: 1em;
-            color: var(--Purple);
-          }
-        }
+        font-size: 0.9rem;
+        color: $darkblue;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+
       }
     }
     p {
@@ -97,12 +99,12 @@
       margin-top: 0em;
     }
     .book-buttons {
-      justify-content: space-between;
+      justify-content: center;
       width: 84%;
       button {
         border-radius: 1em 0em 1em 0em;
         padding: 0.6em 1em;
-        background-color: var(--Green);
+        background-color:$green;
         border: 0px;
         outline: none;
         color: var(--blueText);
@@ -110,8 +112,8 @@
         transition: 0.1s ease-in-out;
         font-size: 0.9rem;
         &:hover {
-          background-color: var(--blueText);
-          color: var(--Green);
+          background-color: $darkblue;
+          color:$green;
         }
       }
     }
