--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -2,6 +2,7 @@
     background-color: $green;
     color:$darkblue;
     transition:0.1s ease-in-out;
+    width: fit-content;
     &:hover{
         background-color: $darkblue;
         color:$green;
