--- a/scss/pages/_about-book.scss
+++ b/scss/pages/_about-book.scss
@@ -238,7 +238,7 @@
       border-radius: 1em;
       cursor:pointer;
       text-decoration: none;
-      color:$purple;
+      color:$darkblue;
       &:hover{
         background-color:rgb(237, 248, 240);
         color:rgb(72, 35, 95);
