Search Bar + Data loading

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -39,10 +39,10 @@ body {
 
 @font-face {
   font-family: "BreeSerif";
-  src: url("../../fonts/BreeSerif-Regular.ttf") format("truetype");
+  src: url("/Readie/fonts/BreeSerif-Regular.ttf") format("truetype");
 }
 
 @font-face {
   font-family: "Song";
-  src: url("../../fonts/SongMyung-Regular.ttf") format("truetype");
+  src: url("/Readie/fonts/SongMyung-Regular.ttf") format("truetype");
 }
