--- a/scss/main.scss
+++ b/scss/main.scss
@@ -10,6 +10,7 @@
 @import "components/navigator";
 @import "components/note-editor";
 @import "components/book-pop-up";
+@import "components/searchbar";
 @import "components/add-dashboard.scss";
 @import "components/buttons";
 //pages
