--- a/scss/components/_book-item.scss
+++ b/scss/components/_book-item.scss
@@ -3,16 +3,26 @@
   position: relative;
   width: 13rem;
   margin-top: 6rem;
-
+  text-decoration: none;
+  color:$darkblue;
+  height: 450px;
   &:hover {
+    text-decoration: none;
+    color:$darkblue;
+    height:450px;
     .background {
-      transform: scale(1.1, 1.1);
+      transform: scale(1.1, 1.0);
       opacity: 1;
     }
     .book-item-front {
       transform: scale(0.8) translateY(-35%);
       img {
         object-fit: contain;
+      }
+      .front-info{
+        h2,p{
+          -webkit-line-clamp: 3;
+        }
       }
     }
     .book-item-back {
@@ -56,6 +66,11 @@
       h2,
       p {
         text-align: center;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;  
+        overflow: hidden;
+        margin-bottom: 0px;
       }
       h2 {
         font-size: 1.4rem;
