--- a/scss/pages/_notes.scss
+++ b/scss/pages/_notes.scss
@@ -40,6 +40,7 @@
         width: 100%;
         display:flex;
         font-size: 1.7rem;
+        margin-bottom:-5px;
         span{
           margin-left:auto;
           position: relative;
