--- a/scss/components/_searchbar.scss
+++ b/scss/components/_searchbar.scss
@@ -1,3 +1,10 @@
+.top-bar-book-page{
+    margin-top:2rem;
+    
+    align-items: center;
+}
+
+
 .search-results{
     display:flex;
     flex-direction: column;
