--- a/scss/pages/_study-page.scss
+++ b/scss/pages/_study-page.scss
@@ -1,7 +1,8 @@
 .mini-book-box{
     display:flex;
     flex-direction: row;
-    margin-bottom:4rem;
+    margin-bottom:1em;
+    align-items: center;
     animation: textload 0.4s;
     .mini-book-img{
         max-width:80px;
@@ -14,13 +15,14 @@
         h3{
             font-family:"Song";
             text-transform: uppercase;
-            font-size: 2rem;
+            font-size: 1.3rem;
             margin-bottom: 0.1em;
         }
         p{
             text-transform: uppercase;
             font-family: "Song";
             letter-spacing: 2px;
+            
         }
     }
 }
@@ -123,18 +125,23 @@
         margin-top:4rem;
         display: flex;
         justify-content: center;
-        flex-direction: column;
+        flex-direction: column-reverse;
         .study-note-item{
             box-shadow: $menu-dropdown;
             padding:1rem 2rem;
             max-width: 500px;
             margin-bottom: 2rem;
+            animation: drop-in 0.2s ease-in-out forwards;
+            p{
+                white-space: pre-wrap;
+            }
             h4{
                 font-family: "Song";
-                width: 100%;
+                width: 90%;
                 display:flex;
                 margin-bottom:1.5rem;
                 font-size: 1.7rem;
+                position: absolute;
                 span{
                   margin-left:auto;
                   position: relative;
@@ -210,4 +217,24 @@ input::-webkit-inner-spin-button {
 /* Firefox */
 input[type=number] {
   -moz-appearance: textfield;
+}
+
+@keyframes drop-in{
+    0%{
+        transform:translateY(-20px);
+    }
+    100%{
+        transform: translateY(0px);
+    }
+}
+
+@media screen and (max-width:990px) {
+    .top-bar-book-page{
+        justify-content: center;
+        .mini-book-box{
+            margin-bottom: 1em;
+            margin-left:auto;
+            margin-right: auto;
+        }
+    }
 }
