--- a/scss/pages/_about-book.scss
+++ b/scss/pages/_about-book.scss
@@ -33,7 +33,10 @@
     animation: textload 0.4s forwards;
     animation-delay: 0.2s;
     opacity:0;
+    display: flex;
+    flex-direction: column-reverse;
     .recent-activity{
+      flex:1;
       width:100%;
       padding:2rem 3rem 4rem 3rem;
       background-color: white;
