--- a/scss/pages/_notes.scss
+++ b/scss/pages/_notes.scss
@@ -90,6 +90,21 @@
       box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.34);
       margin-top:2rem;
       height: fit-content;
+      position: relative;
+      .like-button{
+        position: absolute;
+        right:20px;
+        bottom:20px;
+        color:$purple;
+        cursor:pointer;
+        font-size: 1.4rem;
+      }
+      .active-like-button{
+        font-weight: bold;
+      }
+      .like-anim{
+        animation:like 0.4s ease-in-out;
+      }
       .noteauthor{
         letter-spacing: 2px;
         font-family: "Song";
@@ -153,3 +168,16 @@
      
     }
   }
+
+  @keyframes like{
+    0%{
+      transform:translate(0px,0px);
+    }
+    50%{
+      transform:translate(0px,-5px);
+    }
+    100%{
+      transform:translate(0px,0px);
+    }
+  }
+  
