--- a/scss/pages/_study-page.scss
+++ b/scss/pages/_study-page.scss
@@ -203,6 +203,13 @@
     }
 }
 
+#notes-number, #time-record{
+    span{
+        color:$purple;
+        font-weight: bold;
+    }
+}
+
 .timer-button{
     border:none;
     background-color:rgba(0,0,0,0);
