--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,6 +13,7 @@
 @import "components/searchbar";
 @import "components/add-dashboard.scss";
 @import "components/buttons";
+@import "components/success";
 //pages
 @import "pages/dashboard";
 @import "pages/login";
@@ -20,4 +21,6 @@
 @import "pages/about-book";
 @import "pages/study-page";
 @import "pages/notes";
+@import "pages/progress";
+@import "pages/journal";
 //layout
