--- a/scss/pages/_bookshelf.scss
+++ b/scss/pages/_bookshelf.scss
@@ -126,3 +126,19 @@
     }
   }
 }
+
+.empty-container{
+  height:300px;
+  margin-top:2em;
+  width:50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border:2px dashed $blueText;
+  p{
+    max-width: 50ch;
+    color:$darkblue;
+    text-align: center;
+    font-weight: bold;
+  }
+}
