--- a/scss/pages/_notes.scss
+++ b/scss/pages/_notes.scss
@@ -187,6 +187,15 @@
                 font-size: 1rem;
                 padding:0.7em;
                 cursor:pointer;
+                button{
+                  width:100%;
+                  background-color: rgba(0,0,0,0);
+                  height:100%;
+                  text-align: left;
+                  outline: 0px;
+                  border:0px;
+
+                }
                 &:hover{
                   background-color:rgb(237, 248, 240);
                   color:rgb(72, 35, 95);
