--- a/scss/pages/_notes.scss
+++ b/scss/pages/_notes.scss
@@ -83,6 +83,7 @@
 
 .your-notes-container{
   margin-top:4rem;
+  margin-bottom: 2rem;
     h3{
         font-family: "Bree Serif";
         font-size: 1.7rem;
