--- a/scss/components/_book-item.scss
+++ b/scss/components/_book-item.scss
@@ -48,7 +48,7 @@
       top: 0;
       height: 20%;
       background-color: var(--Purple);
-      border-radius: 0.6em 0.6em 0 0;
+      border-radius:4px;
       width: 100%;
     }
   }
@@ -138,7 +138,7 @@
     opacity: 0;
     transition: 0.1s ease-in-out;
     a {
-      border-radius: 1em 0em 1em 0em;
+      border-radius: 4px;
       text-decoration: none;
       padding: 0.6em 1em;
       background-color:$green;
