--- a/scss/pages/_about-book.scss
+++ b/scss/pages/_about-book.scss
@@ -35,6 +35,7 @@
     opacity:0;
     display: flex;
     flex-direction: column-reverse;
+    margin-bottom: 2rem;
     .recent-activity{
       flex:1;
       width:100%;
@@ -82,6 +83,15 @@
                 &:hover{
                   background-color:rgb(237, 248, 240);
                   color:rgb(72, 35, 95);
+                }
+                button{
+                  width:100%;
+                  height:100%;
+                  text-decoration: none;
+                  background-color: rgba(0,0,0,0);
+                  outline:none;
+                  border:0px;
+                  text-align: left;
                 }
               }
             }
@@ -194,24 +204,19 @@
         &::after{
           content:'';
           position: absolute;
-          background-color:$green;
-          margin-left: auto;
-          margin-right: auto;
-          left:0;
-          right:0;
+          bottom:0px;
           width:0%;
-          height:0px;
-          border-radius: 10px;
-          z-index: -1;
-          top:7px;
+          height:2px;
+          background-color: $purple;
           transition:0.1s ease-in-out;
+          left:0;
         }
         &:hover {
           text-decoration: none;
           &::after{
-            height:30px;
             width:100%;
           }
+          
         }
       }
     }
@@ -294,22 +299,47 @@
   }
 }
 
-@media screen and (max-width: 700px){
+@media screen and (max-width: 935px){
   .about-page{
     flex-direction: column;
+  }
+  .mini-book-box{
+    margin-top:4rem;
+    .mini-book-img{
+      max-width: 40px !important;
+
+    }
   }
   .book-cover-container{
     width: 100px;
     margin-right: 2rem;
+    align-items: center;
+
+  }
+  .bpb{
+    margin-bottom: 0rem;
+    .book-header{
+      padding-bottom:1em;
+    }
   }
   .bcc{
     flex-direction: row;
+    padding-left:1.5rem;
+    .stats{
+      display: flex;
+      margin-top:0rem;
+    }
     .green-button{
       margin-top:0px;
     }
   }
   .bcc-container{
     max-width: 90%;
-    margin-bottom: 5rem;
+    margin-bottom: 2rem;
+  }
+  .book-nav{
+    ul{
+      padding-left:1.5rem;
+    }
   }
 }
