--- a/scss/pages/_browse-page.scss
+++ b/scss/pages/_browse-page.scss
@@ -11,6 +11,11 @@
     }
 }
 
+.loading-icon{
+    visibility: hidden;
+    width: 60px;
+}
+
 .browse-item{
     width: fit-content;
     height: 150px;
