--- a/scss/pages/_progress.scss
+++ b/scss/pages/_progress.scss
@@ -65,32 +65,38 @@
     .goal-progress-container{
         display: flex;
         flex-direction: column;
-        p{
-            font-weight: bold;
+        position: relative;
+        width: fit-content;
+        &:hover{
+            .progress-per{
+                opacity:1;
+            }
+        }
+        .progress-per{
+            position:absolute;
+            padding:0.5em 1em;
+            background-color: white;
+            color:$darkblue;
+            opacity:0;
+            transition:0.1s ease-in-out;
+            border-radius: 1em;
+            top:100%;
+            box-shadow: $menu-dropdown;
         }
         .empty-goal-bar{
             width:300px;
-            background:repeating-linear-gradient(
-                90deg,
-                $lowPurple,
-                $lowPurple 10px,
-                $darkblue 10px,
-                $darkblue 13px 
-            );
-            height:40px;
-            overflow: hidden;
-            border-radius: 1em;
+            height:32px;
             box-shadow: $menu-dropdown;
-
+            background-color: $darkblue;
+            padding: 11px;
+            position: relative;
+            border-radius: 1em;
             .goal-bar-fill{
-                height:100%;
-                background:repeating-linear-gradient(
-                    90deg,
-                    $green,
-                    $green 10px,
-                    $blueText 10px,
-                    $blueText 13px 
-                );
+                height: 100%;
+                background-color: #7cf46f;
+                position: relative;
+                border-radius: 6px;
+                
             }
         }
     }
